# jerbs

./: .travis.yml  Cargo.toml  README.md
src/: db.rs  lib.rs  main.rs
tests/: cli.rs
