[package]
name = "jerbs"
version = "0.2.0"
edition = "2018"
authors = ["Kaz Wesley <kaz@lambdaverse.org>"]
description = "Command-line work-stealing scheduler."
repository = "https://github.com/kazcw/jerbs"
license = "GPL-3.0"
categories = ["command-line-utilities"]
exclude = [".gitignore"]

[dependencies]
anyhow = "1.0"
clap = "2.33"
rusqlite = "0.26"
time = { version = "0.3", features = ["formatting", "local-offset"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tabled = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.2"

[features]
default = ["rusqlite/bundled"]
